# Finbot

./: .gitignore  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: b6c70a04db3d_initial.py
backend/app/: main.py
backend/app/agent/: context.py  executor.py  llm.py  prompt.py  streaming.py  tools.py
backend/app/auth/: dependencies.py  oauth.py  router.py  schemas.py  service.py
backend/app/cache/: budget.py  categories.py  llm_response.py  normalize.py  session.py
backend/app/chat/: router.py  schemas.py  service.py
backend/app/core/: config.py  database.py  redis.py  security.py
backend/app/finance/: router.py  schemas.py  service.py
backend/app/models/: account.py  alert.py  budget.py  category.py  experiment.py  feedback.py  knowledge.py  prompt_version.py  report.py  (+3 more)
backend/tests/: conftest.py  test_agent_context.py  test_agent_executor.py  test_agent_llm.py  test_agent_prompt.py  test_agent_streaming.py  test_agent_tools.py  test_auth.py  test_auth_schemas.py  test_auth_service.py  test_cache_budget.py  test_cache_categories.py  test_cache_llm_response.py  test_cache_normalize.py  test_cache_session.py  test_chat_service.py  test_finance.py  test_finance_schemas.py  test_finance_service.py  test_foundation.py  test_knowledge_router.py  test_oauth.py  test_rag_embedding.py  test_rag_hybrid_search.py  test_rag_hyde.py  test_rag_ingest.py  test_rag_reranker.py  test_rag_retrieve.py  test_rag_rewrite.py  test_security.py  test_teams.py  test_teams_service.py
(+17 files in other folders)
